@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2009,v 1.2424 2009/07/02 18:26:57 wiz Exp $
+$NetBSD: CHANGES-2009,v 1.2425 2009/07/03 07:41:04 manu Exp $
 
 Changes to the packages collection and infrastructure in 2009:
 
@@ -3241,3 +3241,4 @@ Changes to the packages collection and infrastructure in 2009:
 	Updated security/courier-authlib to 0.62.2 [obache 2009-07-02]
 	Updated www/typolight27-translations to 20090701 [taca 2009-07-02]
 	Updated x11/qt4-libs to 4.5.1nb2 [wiz 2009-07-02]
+	Added lang/php5-perl-1.0.0 [manu 2009-07-03]
